Fixing a responsive issue with the grid content blocks on mobile

--- a/src/sass/flexible-content-blocks/_grid-content.scss
+++ b/src/sass/flexible-content-blocks/_grid-content.scss
@@ -75,6 +75,7 @@
 
       @include max-screen(768px){
         justify-content: space-between;
+        padding: 1rem;
       }
 
       & div {
